# test_python_project_slug

./: .all-contributorsrc  setup.cfg
docs/: CONTRIBUTING.md  README.md  conf.py  index.rst  wordlist.txt
src/test_python_project_slug/: __init__.py
tests/: test_test_python_project_slug.py
