[metadata]
name = test-python-project-dist
version = attr: test_python_project_slug.__version__
author = Micael Jarniac
author_email = micael@jarniac.dev
description = A simple Python project template.
license = MIT
license_file = LICENSE
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/MicaelJarniac/test_python_project_slug
project_urls =
    Changelog = https://github.com/MicaelJarniac/test_python_project_slug/blob/main/docs/CHANGELOG.md
    Documentation = https://test_python_project_slug.readthedocs.io
    Repository = https://github.com/MicaelJarniac/test_python_project_slug
    Bug Tracker = https://github.com/MicaelJarniac/test_python_project_slug/issues
# Get more from http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = no

[options.packages.find]
where = src

[options.package_data]
test_python_project_slug = py.typed

[flake8]
max-line-length = 88
max-complexity = 18
ignore = E203, E266, E501, W503, F403, F401

[isort]
profile = black
skip_gitignore = true

[pydocstyle]
convention = google
match_dir = src

[mypy]
files = src

[semantic_release]
changelog_file = docs/CHANGELOG.md
changelog_capitalize = false
version_variable = src/test_python_project_slug/__init__.py:__version__
build_command = python setup.py sdist
branch = main

[coverage:run]
omit = venv/*, tests/*
command_line = -m pytest

[tool:pytest]
# addopts = --cov
